# abettor-cc

./: .gitignore  CMakeLists.txt  Makefile  README.md
conf/: Makefile  config_manager.cc
date/: Makefile  helper.cc
db/: Makefile
db/pgsql/: driver.cc
include/org/labcrypto/abettor++/compat/: types.h
include/org/labcrypto/abettor++/conf/: config_manager.h
include/org/labcrypto/abettor++/date/: helper.h
include/org/labcrypto/abettor++/db/: driver.h
include/org/labcrypto/abettor++/db/pgsql/: driver.h
include/org/labcrypto/abettor++/net/: udp_server.h
include/org/labcrypto/abettor++/os/: proc.h
include/org/labcrypto/abettor++/string/: helper.h
include/org/labcrypto/abettor++/unicode/: unicode.h
os/: Makefile  proc.cc
src/: Makefile
src/conf/: Makefile  config_manager.cc
src/conf/.libs/: libnaeem++-conf.a.1.0  libnaeem++-conf.so.1  libnaeem++-conf.so.1.0
src/db/: Makefile
src/db/.libs/: libnaeem++-db.a.1  libnaeem++-db.a.1.0  libnaeem++-db.so.1  libnaeem++-db.so.1.0
src/db/pgsql/: driver.cc
src/os/: Makefile  proc.cc
src/os/.libs/: libnaeem++-os.a.1  libnaeem++-os.a.1.0  libnaeem++-os.so.1.0
src/string/: Makefile  helper.cc
src/string/.libs/: libnaeem++-string.a.1.0  libnaeem++-string.so.1  libnaeem++-string.so.1.0
src/unicode/: unicode.cc
src/vs2005/: naeem-corelibs++-vs2005.ncb  naeem-corelibs++-vs2005.sln
src/vs2005/debug/: naeem-corelibs++-db.lib  naeem-corelibs++-string.lib  naeem-corelibs++-unicode.lib  neem-corelibs++-db.lib
src/vs2005/naeem-corelibs++-string/: naeem-corelibs++-string.vcproj
src/vs2005/naeem-corelibs++-string/Debug/: BuildLog.htm  vc80.idb
src/vs2005/naeem-corelibs++-string/Release/: BuildLog.htm  vc80.idb
src/vs2005/naeem-corelibs++-unicode/: naeem-corelibs++-unicode.vcproj
src/vs2005/naeem-corelibs++-unicode/Debug/: BuildLog.htm  vc80.idb
src/vs2005/naeem-corelibs++-unicode/Release/: BuildLog.htm  vc80.idb
src/vs2005/neem-corelibs++-db/: neem-corelibs++-db.vcproj
src/vs2005/neem-corelibs++-db/Debug/: BuildLog.htm  vc80.idb
src/vs2005/neem-corelibs++-db/Release/: BuildLog.htm  vc80.idb
src/vs2005/release/: naeem-corelibs++-db.lib  naeem-corelibs++-string.lib  naeem-corelibs++-unicode.lib
string/: Makefile  helper.cc
unicode/: unicode.cc
vs2005/: naeem-corelibs++-vs2005.sln  org.labcrypto.abettor-cc-vs2005.sln
vs2005/naeem-corelibs++-unicode/: naeem-corelibs++-unicode.vcproj
vs2005/neem-corelibs++-db/: neem-corelibs++-db.vcproj
vs2005/org.labcrypto.abettor++.db/: org.labcrypto.abettor++.db.vcproj
vs2005/org.labcrypto.abettor++.string/: org.labcrypto.abettor++.string.vcproj
vs2005/org.labcrypto.abettor++.unicode/: org.labcrypto.abettor++.unicode.vcproj
